Units Scale in Metric mode displays wrong face area #33997

Closed
opened 2013-01-25 19:04:25 +01:00 by Dimitar P. · 3 comments

%%%--- Operating System, Graphics card ---
Mac OS 10.6.8
ATI Radeon HD 5770

- Blender version with error, and version that worked ---

2.65.0 r53177M
Also, 2.65.9 on Ubuntu x64 12.04

- Short description of error ---

In my file, I have set under Scene -> Units to Metric, and my scale to 100. When I am in edit mesh mode, and i select an edge and display the edge lenght, it display correct in according to the set scale. However, the face area is wrong. For example, a swimming pool(one face rectangular plane) 50m x 25m. It displays an area of 12.5m instead of 1250m.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open new file, erase everthing
  2. In properties, choose Scene. Change units from "None" to "Metric"
  3. Change the scale to 100
  4. Add a plane. Go to edit mode and make it 25m x 50m
  5. Under the transform menu (N button), scroll down do Mesh Display and enable edge length and Face Area
  6. Go to edge mode, and select a long edge. It should be 50m.
  7. Switch over to face mode and select the face. It displays 12.5m instead of 1250m.

%%%

%%%--- Operating System, Graphics card --- Mac OS 10.6.8 ATI Radeon HD 5770 - Blender version with error, and version that worked --- 2.65.0 r53177M Also, 2.65.9 on Ubuntu x64 12.04 - Short description of error --- In my file, I have set under Scene -> Units to Metric, and my scale to 100. When I am in edit mesh mode, and i select an edge and display the edge lenght, it display correct in according to the set scale. However, the face area is wrong. For example, a swimming pool(one face rectangular plane) 50m x 25m. It displays an area of 12.5m instead of 1250m. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open new file, erase everthing 2. In properties, choose Scene. Change units from "None" to "Metric" 3. Change the scale to 100 4. Add a plane. Go to edit mode and make it 25m x 50m 5. Under the transform menu (N button), scroll down do Mesh Display and enable edge length and Face Area 6. Go to edge mode, and select a long edge. It should be 50m. 7. Switch over to face mode and select the face. It displays 12.5m instead of 1250m. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r53101, thanks for the report! :)%%%

%%%Fixed in r53101, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33997
No description provided.